client/public/css/user.css
.card3 {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width: 40%;
    margin-left: 30%;
    margin-top: 15%;
  }

  @font-face {
    font-family: myItalicDesignText;
    src: url('/fonts/Brush Script MT Italic.ttf') format('truetype');
  }
  
  .card3:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
  }
  
  .container3 {
    padding: 2px 16px;
  }

  * {box-sizing: border-box;}

body { 
    font-family: arial;
    max-width: 2048px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    min-height: 100vh
}

#navbar {
  overflow: hidden;
  background-color: #eee3eb15;
  padding: 90px 10px;
  transition: 0.4s;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 99;
  animation-name: nav-anime;
  animation-duration: 4s;
}

@keyframes nav-anime {
  from {background-color: rgba(255, 255, 255, 0.705);}
  to {background-color: #eee3eb15;}
}

#navbar a {
  float: left;
  color: black;
  text-align: center;
  padding: 8px;
  text-decoration: none;
  font-size: 16px; 
  line-height: 25px;
  border-radius: 4px;
}

#navbar #logo {
  font-size: 35px;
  font-weight: bold;
  transition: 0.4s;
  color: rgb(255, 255, 255);
}

#navbar a:hover {
  background-color: #ddd;
  color: black;
}

#navbar a.active {
  background-color: dodgerblue;
  color: white;
}

#navbar-right {
  float: right;
}

@media screen and (max-width: 580px) {
  #navbar {
    padding: 20px 10px !important;
  }
  #navbar a {
    float: none;
    display: block;
    text-align: left;
  }
  #navbar-right {
    float: none;
  }
}
.page-bg {
  background: url('/img/bg4.jpg');
  background-size: cover;
  -webkit-filter: blur(3px);
  -moz-filter: blur(3px);
  -o-filter: blur(3px);
  -ms-filter: blur(3px);
  filter: blur(25x);
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
}
.main-content {
  flex-grow: 1;
}

footer {
  color: white;
  border-top: 1px solid #eeeeee;
  margin-top: 4px;
  /* padding: 4px 0; */
  font-family: "myItalicDesignText";
}

#footer-p{
  text-align: center;
  font-size: 80%;
}

#bodys {
  text-align: center;
  margin-top:220px;
  padding:15px 15px 150px;
  font-size:30px
}

.updateButton{
  height: 20px;
}

.entryB{
  background-color: #eee3eb3d;
  color: white;
  width: 50%;
  font-size: 80%;
  padding: 8px 8px;
  margin-left: 50%;
  transition: all 0.5s;
  cursor: pointer;
  border-radius: 4px;
  border: #eee3eb3d;
}

.entryB span {
  cursor: pointer;
  display: inline-block;
  position: relative;
  transition: 0.5s;
}

.entryB span:after {
  content: '\00bb';
  position: absolute;
  opacity: 0;
  top: 0;
  right: -20px;
  transition: 0.5s;
}

.entryB:hover span {
  padding-right: 25px;
}

.entryB:hover span:after {
  opacity: 1;
  right: 0;
}

button {
  background-color: #4CAF50;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: auto;
}

button:hover {
  opacity: 0.8;
}

/* Extra styles for the cancel button */
.cancelbtn {
  width: auto;
  padding: 10px 18px;
  background-color: white;
}

/* Center the image and position the close button */
.imgcontainer {
  text-align: center;
  margin: 24px 0 12px 0;
  position: relative;
}

img.avatar {
  width: 60%;
  border-radius: 60%;
}

.container {
  padding: 16px;
}

span.psw {
  float: right;
  padding-top: 16px;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed;
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  padding-top: 90px;
}

/* Modal Content/Box */
.modal-content {
  background-color: #eee3eb15;
  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
  border: 1px solid #888;
  width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button (x) */
.close {
  position: absolute;
  right: 25px;
  top: 0;
  color: #000;
  font-size: 35px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: red;
  cursor: pointer;
}

/* Add Zoom Animation */
.animate {
  -webkit-animation: animatezoom 0.6s;
  animation: animatezoom 0.6s
}

@-webkit-keyframes animatezoom {
  from {-webkit-transform: scale(0)} 
  to {-webkit-transform: scale(1)}
}
  
@keyframes animatezoom {
  from {transform: scale(0)} 
  to {transform: scale(1)}
}

/* Change styles for span and cancel button on extra small screens */
@media screen and (max-width: 40%) {
  span.psw {
     display: block;
     float: none;
  }
  .cancelbtn {
     width: 100%;
  }
}

